--- a/Source/Mosa.Packages/Mosa.Tools.Package.nuspec
+++ b/Source/Mosa.Packages/Mosa.Tools.Package.nuspec
@@ -39,7 +39,11 @@
 		<file src="..\..\bin\Mosa.Utility.Launcher.dll" target="tools" />
 		<file src="..\..\bin\Mosa.Utility.RSP.dll" target="tools" />
 		<file src="..\..\bin\dnlib.dll" target="tools" />
-		<file src="..\..\bin\SharpDisasm.dll" target="tools" />
+		<file src="..\..\bin\Reko.Arch.Arm.dll" target="tools" />
+		<file src="..\..\bin\Reko.Arch.X86.dll" target="tools" />
+		<file src="..\..\bin\Reko.Core.dll" target="tools" />
+		<file src="..\..\bin\Reko.dll" target="tools" />
+		<file src="..\..\bin\Reko.Libraries.Libc.dll" target="tools" />
 		<file src="..\..\bin\CommandLine.dll" target="tools" />
 		<file src="..\..\bin\Priority Queue.dll" target="tools" />
 		<file src="..\..\bin\MetroFramework.dll" target="tools" />
