--- a/Source/Mosa.Utility.Disassembler/Mosa.Utility.Disassembler.csproj
+++ b/Source/Mosa.Utility.Disassembler/Mosa.Utility.Disassembler.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyTitle>Mosa.Utility.RSP</AssemblyTitle>
+    <AssemblyTitle>Mosa.Utility.Disassembler</AssemblyTitle>
     <Company>MOSA Project</Company>
-    <Product>Mosa.Utility.RSP</Product>
+    <Product>Mosa.Utility.Disassembler</Product>
     <Copyright>Copyright © 2020</Copyright>
     <DebugType>full</DebugType>
     <LangVersion>8.0</LangVersion>
