--- a/Source/Mosa.Tool.Debugger/Mosa.Tool.Debugger.csproj
+++ b/Source/Mosa.Tool.Debugger/Mosa.Tool.Debugger.csproj
@@ -122,6 +122,12 @@
     <ProjectReference Include="..\Mosa.Utility.Disassembler\Mosa.Utility.Disassembler.csproj" />
     <ProjectReference Include="..\Mosa.Utility.Launcher\Mosa.Utility.Launcher.csproj" />
     <ProjectReference Include="..\Mosa.Utility.RSP\Mosa.Utility.RSP.csproj" />
+    <Reference Include="DockPanelSuite">
+      <HintPath>..\External\WinFormsUI.dll</HintPath>
+    </Reference>
+    <Reference Include="DockPanelSuite.ThemeVS2015">
+      <HintPath>..\External\WeifenLuo.WinFormsUI.Docking.ThemeVS2015.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Update="ConnectWindow.resx">
@@ -180,8 +186,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="dnlib" Version="3.3.2" />
-    <PackageReference Include="DockPanelSuite" Version="3.0.6" />
-    <PackageReference Include="DockPanelSuite.ThemeVS2015" Version="3.0.6" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="DebugVMImageWindow.cs" />
