--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -11,6 +11,10 @@ jobs:
     env:
       BUILD_VERSION: 2.0.0
     steps:
+      - name: Set net5.0
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '5.0.x'
       - name: Set Build Version
         uses: travisj/build-number-action@v1
         id: mosa-project-build-number
@@ -21,7 +25,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
       - name: Setup MSBuild
-        uses: microsoft/setup-msbuild@v1.0.1
+        uses: microsoft/setup-msbuild@v1
       - name: Setup Nuget.exe
         uses: nuget/setup-nuget@v1
       - name: Restore nuget Packages
@@ -89,6 +93,10 @@ jobs:
     name: Linux Build
     runs-on: ubuntu-latest
     steps:
+      - name: Set net5.0
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '5.0.x'
       - name: Checkout
         uses: actions/checkout@v1
       - name: Restore nuget Packages
