--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -26,15 +26,13 @@ jobs:
         uses: actions/checkout@v1
         with:
           submodules: recursive
-      - name: Setup MSBuild
-        uses: microsoft/setup-msbuild@v1
       - name: Setup Nuget.exe
         uses: nuget/setup-nuget@v1
       - name: Restore nuget Packages
         run: dotnet restore Mosa.sln
         working-directory: Source
       - name: Build
-        run: msbuild Source/Mosa.sln /p:Version=${{ env.BUILD_VERSION }}
+        run: dotnet build Source/Mosa.sln /p:Version=${{ env.BUILD_VERSION }}
       - name: Create Installer
         run: ISCC.exe /DMyAppVersion=${{ env.BUILD_VERSION }}.${{ steps.mosa-project-build-number.outputs.build-number }} Source/Inno-Setup-Script/Mosa-Installer.iss
       - name: Create Package - Mosa.Tools.Package
