--- a/Source/Mosa.Packages/Mosa.Tools.Package.nuspec
+++ b/Source/Mosa.Packages/Mosa.Tools.Package.nuspec
@@ -49,7 +49,7 @@
 		<file src="..\..\bin\MetroFramework.dll" target="tools" />
 		<file src="..\..\bin\MetroFramework.Design.dll" target="tools" />
 		<file src="..\..\bin\MetroFramework.Fonts.dll" target="tools" />
-		<file src="..\..\bin\WeifenLuo.WinFormsUI.Docking.dll" target="tools" />
+		<file src="..\..\bin\WinFormsUI.dll" target="tools" />
 		<file src="..\..\bin\WeifenLuo.WinFormsUI.Docking.ThemeVS2015.dll" target="tools" />
 		<file src="..\..\bin\System.Threading.Channels.dll" target="tools" />
 		<file src="..\..\bin\System.Threading.Tasks.Extensions.dll" target="tools" />
