--- a/Source/Mosa.Tool.Explorer/Mosa.Tool.Explorer.csproj
+++ b/Source/Mosa.Tool.Explorer/Mosa.Tool.Explorer.csproj
@@ -1,6 +1,6 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net472</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <OutputType>WinExe</OutputType>
     <UseWindowsForms>true</UseWindowsForms>
     <Title>Mosa.Tool.Explorer</Title>
@@ -48,19 +48,5 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Properties\Settings.Designer.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="Reko">
-      <HintPath>..\..\3rdParty\Reko.dll</HintPath>
-    </Reference>
-    <Reference Include="Reko.Arch.Arm">
-      <HintPath>..\..\3rdParty\Reko.Arch.Arm.dll</HintPath>
-    </Reference>
-    <Reference Include="Reko.Arch.X86">
-      <HintPath>..\..\3rdParty\Reko.Arch.X86.dll</HintPath>
-    </Reference>
-    <Reference Include="Reko.Core">
-      <HintPath>..\..\3rdParty\Reko.Core.dll</HintPath>
-    </Reference>
   </ItemGroup>
 </Project>
