--- a/Source/Mosa.Tool.Launcher.Console/Mosa.Tool.Launcher.Console.csproj
+++ b/Source/Mosa.Tool.Launcher.Console/Mosa.Tool.Launcher.Console.csproj
@@ -18,5 +18,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Mosa.Compiler.Common\Mosa.Compiler.Common.csproj" />
+    <ProjectReference Include="..\Mosa.Utility.Configuration\Mosa.Utility.Configuration.csproj" />
+    <ProjectReference Include="..\Mosa.Utility.Launcher\Mosa.Utility.Launcher.csproj" />
   </ItemGroup>
 </Project>
