--- a/Source/Mosa.Tool.Compiler/Properties/launchSettings.json
+++ b/Source/Mosa.Tool.Compiler/Properties/launchSettings.json
@@ -2,7 +2,7 @@
 	"profiles": {
 		"Mosa.Tool.Compiler": {
 			"commandName": "Project",
-			"commandLineArgs": "--drawf --output-asm --output-map --emit-relocations Mosa.TestWorld.x86.exe mscorlib.dll Mosa.Plug.Korlib.dll Mosa.Plug.Korlib.x86.dll"
+			"commandLineArgs": "--drawf --output-asm --output-map --emit-relocations Mosa.TestWorld.x86.dll mscorlib.dll Mosa.Plug.Korlib.dll Mosa.Plug.Korlib.x86.dll"
 		}
 	}
 }
