--- a/Source/Mosa.BareMetal.HelloWorld.x86/Mosa.BareMetal.HelloWorld.x86.csproj
+++ b/Source/Mosa.BareMetal.HelloWorld.x86/Mosa.BareMetal.HelloWorld.x86.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net472</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <OutputType>Exe</OutputType>
     <StartupObject>Mosa.BareMetal.HelloWorld.x86.Boot</StartupObject>
     <DebugType>full</DebugType>
@@ -15,5 +15,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Mosa.Kernel.BareMetal.x86\Mosa.Kernel.BareMetal.x86.csproj" />
     <ProjectReference Include="..\Mosa.Kernel.BareMetal\Mosa.Kernel.BareMetal.csproj" />
+    <ProjectReference Include="..\Mosa.Korlib\Mosa.Korlib.csproj" />
   </ItemGroup>
 </Project>
