--- a/Source/Mosa.Demo.CoolWorld.x86/Mosa.Demo.CoolWorld.x86.csproj
+++ b/Source/Mosa.Demo.CoolWorld.x86/Mosa.Demo.CoolWorld.x86.csproj
@@ -9,8 +9,8 @@
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <DisableStandardFrameworkResolution>true</DisableStandardFrameworkResolution>
     <DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences>
+    <UseAppHost>false</UseAppHost>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <AssemblyName>Mosa.Demo.CoolWorld.x86</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <NoWarn>1685,227</NoWarn>
