feat: net5 complete (#846)

--- a/Source/Mosa.BareMetal.HelloWorld.ARMv8A32/Mosa.BareMetal.HelloWorldARMv8A32.csproj
+++ b/Source/Mosa.BareMetal.HelloWorld.ARMv8A32/Mosa.BareMetal.HelloWorldARMv8A32.csproj
@@ -1,9 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net472</TargetFramework>
-    <AssemblyName>Mosa.BareMetal.HelloWorld.ARMv8A32</AssemblyName>
+    <TargetFramework>net5.0</TargetFramework>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Mosa.BareMetal.HelloWorld.ARMv8A32</RootNamespace>
     <StartupObject>Mosa.BareMetal.HelloWorld.ARMv8A32.Boot</StartupObject>
     <DebugType>full</DebugType>
     <LangVersion>8.0</LangVersion>
@@ -11,11 +9,13 @@
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <DisableStandardFrameworkResolution>true</DisableStandardFrameworkResolution>
     <DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences>
+    <UseAppHost>false</UseAppHost>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Mosa.Kernel.BareMetal.x86\Mosa.Kernel.BareMetal.x86.csproj" />
     <ProjectReference Include="..\Mosa.Kernel.BareMetal\Mosa.Kernel.BareMetal.csproj" />
+    <ProjectReference Include="..\Mosa.Korlib\Mosa.Korlib.csproj" />
     <ProjectReference Include="..\Mosa.UnitTests\Mosa.UnitTests.csproj" />
   </ItemGroup>
 </Project>
