--- a/Source/Mosa.Demo.CoolWorld.x86/Mosa.Demo.CoolWorld.x86.csproj
+++ b/Source/Mosa.Demo.CoolWorld.x86/Mosa.Demo.CoolWorld.x86.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net472</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <OutputType>Exe</OutputType>
     <StartupObject>Mosa.Demo.CoolWorld.x86.Boot</StartupObject>
     <DebugType>full</DebugType>
@@ -9,8 +9,8 @@
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <DisableStandardFrameworkResolution>true</DisableStandardFrameworkResolution>
     <DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences>
+    <UseAppHost>false</UseAppHost>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <AssemblyName>Mosa.Demo.CoolWorld.x86</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <NoWarn>1685,227</NoWarn>
