--- a/Source/Mosa.Demo.VBEWorld.x86/Mosa.Demo.VBEWorld.x86.csproj
+++ b/Source/Mosa.Demo.VBEWorld.x86/Mosa.Demo.VBEWorld.x86.csproj
@@ -21,6 +21,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\Mosa.DeviceDriver\Mosa.DeviceDriver.csproj" />
 		<ProjectReference Include="..\Mosa.DeviceSystem\Mosa.DeviceSystem.csproj" />
+		<ProjectReference Include="..\Mosa.FileSystem\Mosa.FileSystem.csproj" />
 		<ProjectReference Include="..\Mosa.Kernel.x86\Mosa.Kernel.x86.csproj" />
 		<ProjectReference Include="..\Mosa.Korlib\Mosa.Korlib.csproj" />
 		<ProjectReference Include="..\Mosa.Runtime.x86\Mosa.Runtime.x86.csproj" />
