--- a/Source/Mosa.Collections.Generic/Mosa.Collections.Generic.csproj
+++ b/Source/Mosa.Collections.Generic/Mosa.Collections.Generic.csproj
@@ -1,12 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-	  <TargetFramework>net5.0</TargetFramework>
-	  <DebugType>full</DebugType>
-	  <LangVersion>8.0</LangVersion>
-	  <OutputPath>..\..\bin\</OutputPath>
-	  <DebugType>full</DebugType>
-	  <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <TargetFramework>net5.0</TargetFramework>
+    <DebugType>full</DebugType>
+    <LangVersion>8.0</LangVersion>
+    <OutputPath>..\..\bin\</OutputPath>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <DisableStandardFrameworkResolution>true</DisableStandardFrameworkResolution>
+    <DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
-
+  <ItemGroup>
+	<ProjectReference Include="..\Mosa.Korlib\Mosa.Korlib.csproj" />
+   </ItemGroup>
 </Project>
