--- a/Source/Mosa.UnitTests/Mosa.UnitTests.csproj
+++ b/Source/Mosa.UnitTests/Mosa.UnitTests.csproj
@@ -17,6 +17,7 @@
 	</PropertyGroup>
 	<ItemGroup>
 	  <Compile Remove="Mosa.Collections.Generic\BinarySearchTreeTests.cs" />
+	  <Compile Remove="Mosa.Collections.Generic\BitFlagsTests.cs" />
 	  <Compile Remove="Mosa.Collections.Generic\DictionaryTests.cs" />
 	  <Compile Remove="Mosa.Collections.Generic\ListTests.cs" />
 	  <Compile Remove="Mosa.Collections.Generic\QueueTests.cs" />
