--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
        matrix:
-         levels: [-o0, -o1, -o2, -o3, -o4, -o5, -o6, -o7, -o8, -o9, -oFast, -oSize]
+         level: [-o0, -o1, -o2, -o3, -o4, -o5, -o6, -o7, -o8, -o9, -oFast, -oSize]
 
     steps:
       - name: Set net5.0
@@ -40,7 +40,7 @@ jobs:
 
     strategy:
        matrix:
-         levels: [-o0, -o1, -o2, -o3, -o4, -o5, -o6, -o7, -o8, -o9, -oFast, -oSize]
+         level: [-o0, -o1, -o2, -o3, -o4, -o5, -o6, -o7, -o8, -o9, -oFast, -oSize]
 
     steps:
       - name: Set net5.0
