--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -10,7 +10,8 @@ jobs:
     runs-on: windows-latest
 
     strategy:
-       matrix:
+      fail-fast: false
+      matrix:
          level: [-o0, -o1, -o2, -o3, -o4, -o5, -o6, -o7, -o8, -o9, -oFast, -oSize]
 
     steps:
@@ -39,7 +40,8 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
-       matrix:
+      fail-fast: false
+      matrix:
          level: [-o0, -o1, -o2, -o3, -o4, -o5, -o6, -o7, -o8, -o9, -oFast, -oSize]
 
     steps:
