Fixed Github actions not running all the optimization levels (#932)

--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -10,8 +10,9 @@ jobs:
     runs-on: windows-latest
 
     strategy:
-       matrix:
-         levels: [-o0, -o1, -o2, -o3, -o4, -o5, -o6, -o7, -o8, -o9, -oFast, -oSize]
+      fail-fast: false
+      matrix:
+         level: [-o0, -o1, -o2, -o3, -o4, -o5, -o6, -o7, -o8, -o9, -oFast, -oSize, -oMax, -oNone]
 
     steps:
       - name: Set net5.0
@@ -39,8 +40,9 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
-       matrix:
-         levels: [-o0, -o1, -o2, -o3, -o4, -o5, -o6, -o7, -o8, -o9, -oFast, -oSize]
+      fail-fast: false
+      matrix:
+         level: [-o0, -o1, -o2, -o3, -o4, -o5, -o6, -o7, -o8, -o9, -oFast, -oSize, -oMax, -oNone]
 
     steps:
       - name: Set net5.0
